added validation and separation of concerns

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -36,3 +36,10 @@
     font-weight: bold;
   }
 
+  .playerparticipation textarea {
+    height: 80px;
+    width: 200px;
+    resize: none;
+
+  }
+
